<resources>
    <string name="app_name">Events Sicredi</string>
    <string name="titulo_do_evento">Titulo do Evento</string>
    <string name="pre_o_r">Preço: R$</string>
    <string name="date">29/05/2020</string>
    <string name="date_label">Data:</string>
    <string name="_29_85">29,85</string>
    <string name="descr_o_do_evento">Mussum Ipsum, cacilds vidis litro abertis. Quem num gosta di
        mim que vai caçá sua turmis! Quem num gosta di mé, boa gentis num é. Delegadis gente finis,
        bibendum egestas augue arcu ut est. Casamentiss faiz malandris se pirulitá.</string>
</resources>